# llamafarm

./: .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  install.sh
.claude/rules/: pr_workflow.md
.github/workflows/: build-addon-wheels.yml  build-llama.yml  ci.yml  cli-installer.yml  cli.yml  conventional-commits.yml  desktop.yml  docker.yml  docs.yml  e2e.yml  generate-prose-changelog.yml  pyapp.yml  release-cli.yml  release-desktop.yml  release-docker.yml  snapshot-release.yml  test-addon-branch.yml  update-changelog-docs.yml  update-contributors.yml
cli/cmd/: addons_venv.go  bundle.go  models.go  models_shared.go  models_test.go  services_systemd.go
common/: pyproject.toml
common/llamafarm_common/: __init__.py  device.py  model_cache.py  model_format.py  pidfile.py
common/tests/: test_model_format.py  test_model_format_offline.py
config/: schema.yaml
designer/src/: App.tsx  Home.tsx  main.tsx
docs/website/: sidebars.ts
rag/: pyproject.toml
runtimes/edge/: Dockerfile  openapi.json  project.json  pyproject.toml  server.py
runtimes/edge/config/: model_context_defaults.yaml
runtimes/edge/core/: backend_state.py  logging.py
runtimes/edge/models/: __init__.py  base.py  clip_model.py  gguf_language_model.py  hailo_model.py  language_model.py  vision_base.py  yolo_model.py
runtimes/edge/routers/: cache.py  completions.py
runtimes/edge/routers/chat_completions/: service.py  types.py
runtimes/edge/routers/vision/: __init__.py  detect_classify.py  streaming.py  utils.py
runtimes/edge/services/: error_handler.py  zenoh_ipc.py
runtimes/edge/tests/: test_backend_state.py  test_completions_offline.py  test_server_lifecycle.py  test_zenoh_ipc_state.py
runtimes/edge/tests/integration/: conftest.py  monitor_memory.sh  test_errors.py  test_stability.py
runtimes/edge/utils/: context_calculator.py  device.py  file_handler.py  gguf_metadata_cache.py  jinja_tools.py  kv_cache_manager.py  model_cache.py  model_format.py  safe_home.py  thinking.py
runtimes/universal/: pyproject.toml
scripts/wt/: README.md  wt
server/: project.json
server/agents/: chat_orchestrator.py
server/api/: main.py
server/core/: logging.py
server/services/: model_service.py  (+2 more)
tools/: build_addon_wheels.py  test_build_addon_wheels.py
(+138 files in other folders)
